--- a/index.ipynb
+++ b/index.ipynb
@@ -212,7 +212,7 @@
    "outputs": [],
    "source": [
     "\"art.vandelay@vandelay.co\" # False\n",
-    "'art.vanelay@vandelay.co'.endswh"
+    "'art.vanelay@vandelay.co'.endswith('.com')"
    ]
   },
   {
